--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -13,3 +13,14 @@
     flex-grow: 1;
     height: calc(100dvh - 70px);
 }
+
+.no-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    font-size: 18px;
+    font-weight: bold;
+    gap: 8px;
+    align-items: center;
+}
